--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 16
           cache: pnpm
-      - run: pnpm install --frozen-lockfile
+      - run: pnpm install
 
       - name: Build
         run: pnpm run docs:build
