--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "vitepress": "1.0.0-beta.1"
+    "vitepress": "^0.22.4"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs --host",
