--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "devDependencies": {
-    "vitepress": "1.0.0-beta.1"
-  },
   "scripts": {
-    "docs:dev": "vitepress dev docs --host",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:dev": "vitepress dev doc",
+    "docs:build": "vitepress build doc",
+    "docs:preview": "vitepress preview doc"
   },
-  "dependencies": {
+  "devDependencies": {
+    "vitepress": "1.0.0-rc.32"
   }
 }
