--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: pnpm
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: false
+
       - run: pnpm install
 
       - name: Build
