--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
     "docs:preview": "vitepress preview doc"
   },
   "devDependencies": {
-    "vitepress": "1.0.0-rc.32"
+    "vitepress": "1"
   }
 }
